--- a/charts/monitoring/grafana/values.yaml
+++ b/charts/monitoring/grafana/values.yaml
@@ -116,6 +116,10 @@ grafana:
       # credentials defined above.
       disable_login_form: true
 
+      # Change this to the URL that will be used to redirect the user
+      # to after signing out from Grafana when using external OIDC.
+      signout_redirect_url: ""
+
       # Set this to true to allow Viewers to
       # edit existing dashboards and explore datasources.
       # Viewers will still not be able to save these changes back
