--- a/pkg/crd/k8c.io/kubermatic.k8c.io_clusters.yaml
+++ b/pkg/crd/k8c.io/kubermatic.k8c.io_clusters.yaml
@@ -1502,10 +1502,11 @@ spec:
                           type: boolean
                       type: object
                     konnectivityEnabled:
+                      default: true
                       description: |-
                         Deprecated: KonnectivityEnabled enables konnectivity for controlplane to node network communication.
-                        As OpenVPN will be removed in the future KKP versions, clusters with konnectivity disabled will not be supported.
-                        All existing clusters with OpenVPN should migrate to the Konnectivity.
+                        Konnectivity is the only supported choice for controlplane to node network communication. This field is
+                        defaulted to true and setting it to false is rejected. It will be removed in a future release.
                       type: boolean
                     nodeCidrMaskSizeIPv4:
                       description: |-
