--- a/docs/zz_generated.seed.ee.yaml
+++ b/docs/zz_generated.seed.ee.yaml
@@ -94,6 +94,16 @@ spec:
         # Optional: EnforceAuditLogging enforces audit logging on every cluster within the DC,
         # ignoring cluster-specific settings.
         enforceAuditLogging: false
+        # Optional: EnforceAuditWebhook allows admins control webhook backend for every cluster within the DC,
+        # ignoring cluster-specific settings.
+        enforceAuditWebhook:
+          # Optional: AuditWebhook contains reference to secret holding the audit webhook backend config
+          auditWebhook: null
+          auditWebhookInitialBackoff: ""
+          # Enabled will enable or disable audit webhook backend.
+          enabled: false
+          # Optional: PolicyPreset can be set to utilize a pre-defined set of audit policy rules.
+          policyPreset: ""
         # Optional: EnforcePodSecurityPolicy enforces pod security policy plugin on every clusters within the DC,
         # ignoring cluster-specific settings.
         enforcePodSecurityPolicy: false
