--- a/pkg/crd/k8c.io/kubermatic.k8c.io_clusters.yaml
+++ b/pkg/crd/k8c.io/kubermatic.k8c.io_clusters.yaml
@@ -198,7 +198,7 @@ spec:
                           type: object
                       type: object
                     webhookBackend:
-                      description: 'Optional: Configures the fluent-bit sidecar deployed alongside kube-apiserver.'
+                      description: 'Optional: Configures the webhook backend for audit logs.'
                       properties:
                         auditWebhook:
                           description: 'Optional: AuditWebhook contains reference to secret holding the audit webhook backend config'
